modify aca3001 /query API